<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/Theme.Design.NoActionBar"
    tools:context="com.temofeyk.smokifier.screens.welcome.WelcomeActivity">

    <ImageView
        android:layout_marginTop="@dimen/margin_40"
        android:layout_width="@dimen/width_logo_loading"
        android:layout_height="@dimen/height_logo_loading"
        android:layout_gravity="center"
        android:src="@drawable/ic_pipe"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/txtSetMinutes"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/motto"
        android:textAlignment="center"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/size_large_text"
        android:textStyle="bold" />
    <View
        style="@style/SeparatorStyle"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_40" />

    <Button
        android:id="@+id/welcome_start_btn"
        style="@style/ButtonStyle"
        android:text="@string/start">

        <requestFocus />
    </Button>


</LinearLayout>